# dotfiles

./: .gitignore  .gitmodules  README.md  XCompose  Xresources  bash_profile  bashrc  gitconfig  mpdasrc  tmux.conf  vimpcrc  xinitrc
Xresources.d/: Xresources  colors  colors.bak  rofi
config/: .gitignore
config/X11/: Xresources
config/alacritty/: alacritty.toml  alacritty.yml
config/fish/: .gitignore  aliases.fish  config.fish  env.fish  fish_plugins
config/fontconfig/: 69-emoji.conf  fonts.conf
config/fuzzel/: fuzzel.ini
config/git/: config
config/gtk-2.0/: gtkfilechooser.ini  gtkrc  gtkrc.mine
config/gtk-3.0/: bookmarks  gtk.css  settings.ini
config/gtk-4.0/: .gitignore  settings.ini
config/htop/: htoprc
config/mako/: config
config/sway/pydeps/: pyproject.toml
firefox/: .gitignore  theme.xpi  user-overrides.js  user.js  userChrome-overrides.css  userChrome.css  vimium.css
gnupg/: gpg-agent.conf  gpg.conf
kernel/: config-4.19-gentoo  config-4.19.57-gentoo  config-5.3-gentoo  config-5.4-gentoo
mutt/: account.foxbnc  account.foxdev  account.ndev  account.revthefox  certs  colors  gpg.rc  mailboxes  mailcap  muttrc
ncmpcpp/: bindings  config
remmina/: Lelianux.colors
slack/: theme.txt
termux/: colors.properties
vim/: .gitignore  vimrc
weechat/: .gitignore  README.md  alias.conf  aspell.conf  autosort.conf  buffer_autoset.conf  buffers.conf  buflist.conf  fset.conf  irc.conf  iset.conf  logger.conf  otr.conf  plugins.conf  sec.conf  spell.conf  trigger.conf  urlgrab.conf  weechat.conf  xfer.conf
windows-terminal/: settings.json
(+165 files in other folders)
